Use Round instead of ToInt when converting cell's preferred width to int

We don't fully support subpixel layout in tables (crbug.com/377847).
When allocating logical horizontal space for table cells with auto
width, the table cell may require a width with subpixel fraction,
but previously we only allocated a space that is enough to contain
the integer width.

Now use Round() instead of ToInt() when allocating logical horizontal
space for table cells. Why not Ceil()? I guess somewhere else also
uses Round() to wrap text so the rounded space is enough.

Bug: 777156
Change-Id: I0f9ebafe8b8e1ebbdea01716a7dca14961dbb678